# sts2-agent

./: .env  .env.example  .gitignore  .gitmodules  API.md  EXP.md  README.md  TODO.md  agent.py  analyze_baseline.py  config.py  config.yaml  config.yaml.yaml  context.py  count_samples.py  exception.py  game.py  game_env.py  llm.py  main.py  memory.py  network.py  pyproject.toml  state.py  sts2_cards_data.yaml  test.py  tools.py  translator.py  util.py
distill/: dataset_info.json  download_data.sh  dpo.py  dpo.sh  dpo_lf.sh  dpo_lf.yaml  ds_z2_config.json  ds_z3_config.json  fix_merge.py  make_dpo_data.py  make_sft_data.py  sft.py  sft.sh
prompts/: system_prompt.md  user_prompt.md
