[project]
name = "sts2-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "instructor>=1.15.1",
    "langchain-core>=1.2.28",
    "loguru>=0.7.3",
    "pydantic>=2.13.0",
]

[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
